--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
-  "name": "remotebase",
+  "name": "luts",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
+    "@mui/styles": "^5.11.2",
     "@mui/x-date-pickers": "^5.0.12",
     "@react-md/chip": "^5.1.3",
     "@react-md/typography": "^5.1.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.1.6",
     "bootstrap": "^5.2.3",
+    "countries-list": "^2.6.1",
     "dayjs": "^1.11.7",
+    "notistack": "^2.0.8",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-calendly": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.2",
+    "react-phone-number-input": "^3.2.16",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
